--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ certifi==2018.10.15
 chardet==3.0.4
 idna==2.7
 PTable==0.9.2
-pyyaml>=4.2b1
+PyYAML==4.2b4
 requests==2.20.1
-urllib3==1.24.1
+urllib3==1.24.2
