--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-certifi==2018.10.15
-chardet==3.0.4
-idna==2.7
-PTable==0.9.2
-PyYAML==4.2b4
-requests==2.20.1
-urllib3==1.24.2
+certifi>=2018.10.15
+chardet>=3.0.4
+idna>=2.7
+PTable>=0.9.2
+PyYAML>=5.4
+requests>=2.20.1
+urllib3>=1.26.5
+
